<resources>
    <string name="app_name">HappyWifeApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_event">Add new event</string>
    <string name="edit_text_hint_title">Title</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_description">Things worth to remember at this day</string>
    <string name="edit_text_hint_location">Location</string>
    <string name="new_event_text_use_map">USE MAP</string>
    <string name="new_event_add_image_text">ADD IMAGE</string>
    <string name="add_new_event_button_save">SAVE</string>
    <string name="Picture_dialog_select_action">Select Action</string>
    <string name="Picture_dialog_select_photo_from_gallery">Select photo from gallery</string>
    <string name="Picture_dialog_capture_photo_from_camera">Capture photo from camera</string>
    <string name="all_events_list">ALL EVENTS</string>
    <string name="image_content_description">image</string>
    <string name="update_event_button">UPDATE</string>
    <string name="update_event">Update event</string>
    <string name="upcoming_events">Upcoming events</string>


    <string name="see_next_month">Next month</string>
    <string name="see_previous_month">Previous\nmonth</string>
</resources>