<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".updateEvent.UpdateEventFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_update_event"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:theme="@style/CustomToolbarStyle"/>

        <ScrollView
            android:id="@+id/scroll_view_update_event"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_update_event">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/main_content_add_new_event_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_title_update_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_text_title_update_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_hint_title"
                        android:inputType="textCapWords"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/edit_text_text_size" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_date_update_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="@dimen/add_new_event_text_input_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_title_update_event">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_text_date_update_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_hint_date"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:inputType="text"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/edit_text_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_location_update_event"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/add_new_event_text_input_margin_top"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_description_update_event">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_text_location_update_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/edit_text_hint_location"
                        android:inputType="text"
                        android:textColor="@color/primary_text_color"
                        android:textColorHint="@color/secondary_text_color"
                        android:textSize="@dimen/edit_text_text_size" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_description_update_event"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_marginTop="@dimen/add_new_event_text_input_margin_top"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_date_update_event"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <EditText
                        android:id="@+id/edit_text_description_update_event"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:ems="10"
                        android:textSize="@dimen/edit_text_text_size"
                        android:hint="@string/edit_text_hint_description"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:layout_marginTop="@dimen/add_new_event_text_input_margin_top" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_view_place_image_update_event"
                    android:layout_width="@dimen/add_new_event_place_image_size"
                    android:layout_height="@dimen/add_new_event_place_image_size"
                    android:layout_marginTop="@dimen/add_new_event_place_image_marginTop"
                    android:background="@drawable/shape_image_view_border"
                    android:padding="@dimen/add_new_event_place_image_padding"
                    android:scaleType="centerCrop"
                    android:src="@drawable/add_new_event_image_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_input_layout_location_update_event" />

                <TextView
                    android:id="@+id/text_view_use_map_update_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/new_event_text_use_map"
                    android:textSize="@dimen/add_new_event_text_add_image_textSize"
                    android:textStyle="bold"
                    android:padding="@dimen/add_new_event_text_add_image_padding"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toEndOf="@id/image_view_place_image_update_event"
                    app:layout_constraintTop_toBottomOf="@id/text_input_layout_location_update_event"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/text_view_add_image_update_event"/>

                <TextView
                    android:id="@+id/text_view_add_image_update_event"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/new_event_add_image_text"
                    android:textSize="@dimen/add_new_event_text_add_image_textSize"
                    android:textStyle="bold"
                    android:padding="@dimen/add_new_event_text_add_image_padding"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintStart_toEndOf="@id/image_view_place_image_update_event"
                    app:layout_constraintTop_toBottomOf="@id/text_view_use_map_update_event"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/update_event_button"/>

                <Button
                    android:id="@+id/update_event_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/add_new_event_button_save_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:gravity="center"
                    android:paddingTop="@dimen/add_new_event_button_save_paddingTopBottom"
                    android:paddingBottom="@dimen/add_new_event_button_save_paddingTopBottom"
                    android:text="@string/update_event_button"
                    android:textColor="@color/white_color"
                    android:textSize="@dimen/add_new_event_button_size"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/image_view_place_image_update_event" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>